# Cross-Platform-Runtime-Orchestrator

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/hello_ts/: app.ts
examples/node_app/: index.ts
include/orchestrator/: version.h
scripts/: build_v8.md  run_local_debug.sh
src/: main.cc
src/runtime/: inspector_server.cc  inspector_server.h  isolate_pool.cc  isolate_pool.h  node_bridge.cc  node_bridge.h  platform_win.h  runtime.cc  runtime.h  ts_transpiler.cc  ts_transpiler.h
src/util/: file.cc  file.h  logging.cc  logging.h
